# grok-geo

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-ui.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
devtools/: download_artifacts.py  inspect_response.py  run_hosted_audit.py  upload_skill.py
geo-audit-runs/geo_offline_demo_00000001/logs/: events.jsonl
geo-audit-runs/geo_offline_demo_00000001/output/: evidence.csv  manifest.json  opportunities.csv  report.json  report.md
geo-audit-runs/test/: alerts.json  metrics_history.jsonl
scripts/: package_skill.py  performance_optimization.py
skill/grok-geo/: CHANGELOG.md  METRICS.md  README.md  SKILL.md
skill/grok-geo/evals/: metric-fixtures.json  run_evals.py  security-cases.jsonl  trigger-prompts.csv  workflow-cases.jsonl
skill/grok-geo/examples/: content_briefs.offline.json  expected-report.json  input.complete.json  input.minimal.json  offline-results.jsonl  opportunities.offline.json  questions.offline.json  run_offline_demo.py
skill/grok-geo/mcp/: cursor-mcp-example.json  manifest.json  mcp_server.py
skill/grok-geo/scripts/: config.py  (+42 more)
tests/boundary/: __init__.py  test_edge_cases.py
tests/integration/: test_offline_pipeline.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: test_calculate_metrics_functional.py  test_core.py  test_v19_scripts.py  test_v2_scripts.py  test_v3_scripts.py  test_v4_scripts.py  test_v5_scripts.py
ui/: app.py
(+81 files in other folders)
